devops-iac-athena/cloudformation/athena/templates/securitygroups-eks-uat.yml
AWSTemplateFormatVersion: "2010-09-09"
Description: Athena Security Groups
Parameters:
  VPCID:
    Description:
      VPC ID of your existing Virtual Private Cloud (VPC) where you want
      to depoy Athena.
    Type: AWS::EC2::VPC::Id
  VPCCIDR:
    AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/([0-9]|[1-2][0-9]|3[0-2]))$
    ConstraintDescription: Must be a valid IP range in x.x.x.x/x notation
    Description: The CIDR block for VPC
    Type: String
  ManagementSG:
    Description: The Security Group that used to manage athena project
    Type: AWS::EC2::SecurityGroup::Id
Resources:
  # Athena PostgreSQL RDS SG
  PostgreSQLSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Athena PostgreSQL Database Security Group
      VpcId: !Ref VPCID
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 5432
          ToPort: 5432
          SourceSecurityGroupId: !Ref ManagementSG
        - IpProtocol: tcp
          FromPort: 5432
          ToPort: 5432
          CidrIp: !Ref VPCCIDR
        - IpProtocol: tcp
          FromPort: 5432
          ToPort: 5432
          CidrIp: 10.24.0.0/16

  # Athena Production Cache & Queue SG

  DCSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Athena Debezium Connector Security Group
      VpcId: !Ref VPCID
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: !Ref VPCCIDR
Outputs:
  PostgreSQLSG:
    Description: Athena PostgreSQL RDS Security Group
    Value: !Ref PostgreSQLSG
  DebeziumConnectorSG:
    Description: Security Group for Debezium Connector
    Value: !Ref DCSecurityGroup
